[project]
name = "packet-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "ruff>=0.15.0",
    "torch>=2.10.0",
    "torch-onnx>=0.1.25",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
]
